--- a/xilinx/mioc-top/mioc_top_summary.html
+++ b/xilinx/mioc-top/mioc_top_summary.html
@@ -7,6 +7,7 @@
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>mioc-top.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
+<TD> No Errors </TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
@@ -72,5 +73,5 @@
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 09/06/2022 - 05:17:38</center>
+<br><center><b>Date Generated:</b> 09/06/2022 - 09:28:43</center>
 </BODY></HTML>
